SyntacticAnalyzer/tests/success/clase_metodo_sentencia_for.java
class A {
	dynamic boolean methodb1 (Objeto o1, Objeto o2)
		var int i1, i2;
	{
		i2 = o1.getCount();

		for (i1 = 0; i1 < i2; i+1)
			;
	}
}
