SyntacticAnalyzer/tests/fail/for01.java
class foo {

	ctor(int n1)
		var int n2, n3;
		var boolean b1;
		{	
			// el primer parametro es una asignacion
			for(n2 + 10; n2 != 20; true&&false%null) {
			 	i = i+1;
		
			}

		}
}
